# script2bundle

./: .gitignore  CHANGELOG.md  ThisDirectory.md  pyproject.toml  readme.md  script2bundle.py
.github/workflows/: pep8formatting.yml  prcheck.yml  release.yml  release_check.yml
templates/: CHANGELOG.md.j2
tests/: conftest.py  test_script2bundle.py
