[project]
name = "script2bundle"
description = "Generate an application bundle (MacOS) from an executable"
readme = "readme.md"
version = "0.3.0"
dependencies = ["icnsutil"]

[project.scripts]
script2bundle = "script2bundle:main"

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project.urls]
homepage = "https://github.com/andythomas/script2bundle"

[tool.ruff]
line-length = 99 # max per pep8

[tool.ruff.lint]
extend-select = ["D", "A", "I", "PLW0602", "W505", "C901"]

[tool.ruff.lint.pycodestyle]
max-line-length = 100
max-doc-length = 72   # should be max 72 per pep8

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
build_command = "pip install flit && flit build --no-use-vcs"
allow_zero_version = true

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '''^refactor''',
    '''^test''',
    '''^chore''',
    '''^ci''',
]

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
